Added codeql.yml (#40)
* Added codeql.yml

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

* Fixed errors

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

---------

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>